objects/GP_Atributo_de_evento__c.object
<CustomObject>
    <fields>
        <fullName>GP_Evento_General__c</fullName>
        <label>GP Evento General</label>
        <referenceTo>GP_Evento_General__c</referenceTo>
        <relationshipLabel>GP Atributos de evento</relationshipLabel>
        <relationshipName>GP_Atributos_de_evento</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Nombre_API__c</fullName>
        <label>Nombre de API</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_de_atributo__c</fullName>
        <label>Tipo de atributo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>String</fullName>
                </value>
                <value>
                    <fullName>Boolean</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Valores_Posibles__c</fullName>
        <inlineHelpText>Separe cada valor con un &quot;;&quot; . Ejemplo: valor1;valor2;valor3;</inlineHelpText>
        <label>Valores Posibles</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>GP Atributo de evento</label>
    <nameField>
        <label>Nombre de atributo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GP Atributos de evento</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Valores_posibles_obligatorio</fullName>
        <active>true</active>
        <errorConditionFormula>if(  ISPICKVAL( Tipo_de_atributo__c , &apos;String&apos;) &amp;&amp; Valores_Posibles__c = null, true, false)</errorConditionFormula>
        <errorDisplayField>Valores_Posibles__c</errorDisplayField>
        <errorMessage>El campo &quot;Valores Posibles&quot; es obligatorio cuando el &quot; Tipo de atributo&quot; es String.</errorMessage>
    </validationRules>
</CustomObject>